# GazeboSimRos2

./: .gitignore  README.md
docker/: build_image.sh  dockerfile  install_rosdeps.sh  install_tools.sh  run_image.sh
src/itls_robot_description/: CMakeLists.txt  package.xml
src/itls_robot_description/config/: gazebo_bridge.yaml  gazebo_bridge_config.yaml  static_transform_params.yaml
src/itls_robot_description/gazebo_model/: container.world  without_lidar.sdf
src/itls_robot_description/launch/: robot_shape.launch.py
src/itls_robot_description/models/container_wall/: model.config  model.sdf
src/itls_robot_description/models/container_wall/meshes/: container_wall.dae  container_wall.objZone.Identifier
src/itls_robot_description/urdf/: itls_gazebo.xacro  itls_inertial_fns.xacro  itls_main.urdf.xacro  itls_robot_base.xacro  itls_robot_clean.urdf.xml  itls_robot_wheels.xacro  itls_scanners.xacro
src/itls_robot_description/urdf/parts/: itls_gazebo.xacro  itls_main.urdf.xacro  itls_robot_base.xacro  itls_robot_wheels.xacro  itls_scanners.xacro
src/itls_robot_description/worlds/: container.world
