<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>itls_robot_description</name>
    <version>0.0.0</version>
    <description>Robot description of the ITLS robot</description>
    <maintainer email="wael.alsayegh@inmind.ai">Wael Alsayegh</maintainer>
    <license>Proprietary</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>
    <depend>robot_state_publisher</depend>
    <depend>xacro</depend>
    <exec_depend>rclcpp</exec_depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>